Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Leyenda de Ochi -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El amateur: Operacion venganza -->
+<li>
+  <a href="../Peliculas/pelicula633.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/9WPWF0AmklsKclrXeyKXbQ543ZA.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El amateur: Operación venganza 2025</span>
+    <span class="hidden">Charlie Heller es un brillante pero introvertido decodificador de la CIA que trabaja en una oficina en el sótano de la sede de Langley. Su vida cambia radicalmente cuando su esposa muere en un ataque terrorista en Londres. Cuando sus supervisores se niegan a tomar cartas en el asunto, él mismo toma las riendas y se embarca en un peligroso viaje por todo el mundo para localizar a los responsables. Su inteligencia puede ser el arma definitiva para llevar a cabo su venganza.</span>
+  </a>
+</li>
+<!--FIN--><!-- La Leyenda de Ochi -->
 <li>
   <a href="../Peliculas/pelicula632.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
