--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El amateur: Operacion venganza -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Fabricante de lagrimas -->
+<li>
+  <a href="../Peliculas/pelicula634.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/i91SgC0uQa3fb68foFS3zgaMUuD.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Fabricante de lágrimas 2024</span>
+    <span class="hidden">Nica y Rigel se dan cuenta de que unos poderosos e intensos sentimientos los unen tras ser adoptados de un orfanato, donde tuvieron una difícil infancia.</span>
+  </a>
+</li>
+<!--FIN--><!-- El amateur: Operacion venganza -->
 <li>
   <a href="../Peliculas/pelicula633.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
