Crear/Actualizar Categorias/crimen/index.html

--- a/Categorias/crimen/index.html
+++ b/Categorias/crimen/index.html
@@ -71,7 +71,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Alarum: Codigo Letal -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El contador -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula636.html">
+    <img src="https://image.tmdb.org/t/p/original/1Bd9ItSLT13u8Na0PApQAMcW1Jw.jpg" alt="El contador" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El contador</div>
+  <div class="text-xs text-white/70">2016</div>
+</article><!-- Alarum: Codigo Letal -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula631.html">
     <img src="https://image.tmdb.org/t/p/original/chIQxgimGbIFnuFsLqpcoTbsH9.jpg" alt="Alarum: Código Letal" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
