Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La mujer de las sombras -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El contador -->
+<li>
+  <a href="../Peliculas/pelicula636.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/1Bd9ItSLT13u8Na0PApQAMcW1Jw.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El contador 2016</span>
+    <span class="hidden">Christian Wolff es un contador y genio matemático, un hombre extremadamente tranquilo, obsesivo con el orden y con mucha más afinidad con los números que con las personas, que lleva una doble vida como asesino despiadado.</span>
+  </a>
+</li>
+<!--FIN--><!-- La mujer de las sombras -->
 <li>
   <a href="../Peliculas/pelicula635.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
