--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -162,7 +162,7 @@ document.addEventListener("DOMContentLoaded", () => {
    <img 
   src="https://image.tmdb.org/t/p/original/1Bd9ItSLT13u8Na0PApQAMcW1Jw.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">El contador 2016</span>
-    <span class="hidden">Christian Wolff es un contador y genio matemático, un hombre extremadamente tranquilo, obsesivo con el orden y con mucha más afinidad con los números que con las personas, que lleva una doble vida como asesino despiadado.</span>
+    <span class="hidden">contable 1 Christian Wolff es un contador y genio matemático, un hombre extremadamente tranquilo, obsesivo con el orden y con mucha más afinidad con los números que con las personas, que lleva una doble vida como asesino despiadado.</span>
   </a>
 </li>
 <!--FIN--><!-- La mujer de las sombras -->
