--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El contador -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ash -->
+<li>
+  <a href="../Peliculas/pelicula637.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/5Oz39iyRuztiA8XqCNVDBuy2Ut3.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Ash 2025</span>
+    <span class="hidden">En el misterioso planeta Ash, Riya se despierta y descubre que su tripulación ha sido masacrada. Cuando un hombre llamado Brion llega para rescatarla, se desata un calvario de terror psicológico y físico mientras Riya y Brion deben decidir si pueden confiar el uno en el otro para sobrevivir</span>
+  </a>
+</li>
+<!--FIN--><!-- El contador -->
 <li>
   <a href="../Peliculas/pelicula636.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
