--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ash -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El jardinero -->
+<li>
+  <a href="../Peliculas/pelicula638.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/sVuYUl7EtBxyJTOl4Ao7eZVjKDb.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El jardinero 2025</span>
+    <span class="hidden">Serge guarda un secreto de Estado. Él, su familia y el jardinero Leo aparecen en una lista negra del gobierno. Intentan idear un plan para seguir con vida.</span>
+  </a>
+</li>
+<!--FIN--><!-- Ash -->
 <li>
   <a href="../Peliculas/pelicula637.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
