--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -72,7 +72,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La Leyenda de Ochi -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mision: Imposible - La sentencia final -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula640.html">
+    <img src="https://image.tmdb.org/t/p/original/haOjJGUV00dKlZaJWgjM1UD1cJV.jpg" alt="Misión: Imposible - La sentencia final" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Misión: Imposible - La sentencia final</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- La Leyenda de Ochi -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula632.html">
     <img src="https://image.tmdb.org/t/p/original/uyz9qcZdIrUqVrwly3KB5oPUKZO.jpg" alt="La Leyenda de Ochi" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
