--- a/Plataforma/paramount/index.html
+++ b/Plataforma/paramount/index.html
@@ -219,7 +219,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Novocaine sin dolor -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mision: Imposible - La sentencia final -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula640.html">
+    <img src="https://image.tmdb.org/t/p/original/haOjJGUV00dKlZaJWgjM1UD1cJV.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Misión: Imposible - La sentencia final</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Novocaine sin dolor -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="https://lz.blogdepelis.lat/Peliculas/pelicula625.html">
     <img src="https://image.tmdb.org/t/p/original/xBufdKzjdCpJkFg0NXPsdiihST.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
