Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mision: Imposible - La sentencia final -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rescate implacable -->
+<li>
+  <a href="../Peliculas/pelicula641.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/aG50Ad3UV8cCQWpNWSHHUqgKGNB.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Rescate implacable 2025</span>
+    <span class="hidden">Levon Cade dejó atrás una distinguida carrera militar en operaciones encubiertas para llevar una vida sencilla trabajando en la construcción. Pero cuando la hija de su jefe, quien es como familia para él, es capturada por traficantes de personas, su búsqueda para traerla de regreso revela un mundo de corrupción mucho mayor de lo que jamás pudo imaginar.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mision: Imposible - La sentencia final -->
 <li>
   <a href="../Peliculas/pelicula640.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
