--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rescate implacable -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Profe -->
+<li>
+  <a href="../Peliculas/pelicula642.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/AdjL0R0c1rS9tld2dx9l9ptr9wf.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El Profe 1971</span>
+    <span class="hidden">Cantinflas es un profesor enviado a una pequeña ciudad en el medio de la nada, en donde pide una escuela para poder enseñar. Acaba de darle la mano a la ciudad. Cuando llega llega a conocer a los líderes corruptos que a través de la película tratan de hacerle salir. A pesar de que está siendo acosado se puede ver lo mucho que se preocupa por los niños y sus circunstancias. Él se ocupa de los problemas mediante el uso de sus comentarios hilarantes.</span>
+  </a>
+</li>
+<!--FIN--><!-- Rescate implacable -->
 <li>
   <a href="../Peliculas/pelicula641.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
