Crear/Actualizar Categorias/movie/index.html

--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El Profe -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El analfabeto -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula643.html">
+    <img src="https://image.tmdb.org/t/p/original/sooOWMEc2YxZmYiMfRLifHhefy4.jpg" alt="El analfabeto" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El analfabeto</div>
+  <div class="text-xs text-white/70">1961</div>
+</article><!-- El Profe -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula642.html">
     <img src="https://image.tmdb.org/t/p/original/AdjL0R0c1rS9tld2dx9l9ptr9wf.jpg" alt="El Profe" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
