--- a/Categorias/musica/index.html
+++ b/Categorias/musica/index.html
@@ -75,7 +75,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Letras Explicitas -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Better Man: La Historia de Robbie Williams -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula644.html">
+    <img src="https://image.tmdb.org/t/p/original/ak7VgAaI94K6CbbFuL22xIBJtyE.jpg" alt="Better Man: La Historia de Robbie Williams" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Better Man: La Historia de Robbie Williams</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Letras Explicitas -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula274.html">
     <img src="https://image.tmdb.org/t/p/original/bjVN5D5AXjGVTJAJX469aOzGgnc.jpg" alt="Letras Explícitas" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
