--- a/Plataforma/marvel/index.html
+++ b/Plataforma/marvel/index.html
@@ -157,7 +157,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Hulk vs. Wolverine -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El Invencible Iron Man -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula645.html">
+    <img src="https://image.tmdb.org/t/p/original/fIvF6VGIFkNsCTgKYXwTX2q1rzF.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El Invencible Iron Man</div>
+  <div class="text-xs text-white/70">2007</div>
+</article><!-- Hulk vs. Wolverine -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="https://lz.blogdepelis.lat/Peliculas/pelicula562.html">
     <img src="https://image.tmdb.org/t/p/original/p8PZfkrCuXanfYr3k6xAS6WzN8Y.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
