--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Better Man: La Historia de Robbie Williams -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Invencible Iron Man -->
+<li>
+  <a href="../Peliculas/pelicula645.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/fIvF6VGIFkNsCTgKYXwTX2q1rzF.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El Invencible Iron Man 2007</span>
+    <span class="hidden">Cuando los esfuerzos de un industrial creído de levantar un templo chino antiguo le llevan a seriamente herirse y capturado por fuerzas enemigas, debe usar sus ideas para una armadura de poder revolucionaria a fin de aguantar como un superhéroe.</span>
+  </a>
+</li>
+<!--FIN--><!-- Better Man: La Historia de Robbie Williams -->
 <li>
   <a href="../Peliculas/pelicula644.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
