Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Invencible Iron Man -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La venganza de Popeye -->
+<li>
+  <a href="../Peliculas/pelicula646.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/k0PqbsIRcmmm5wzO2mLQLa2SEjL.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La venganza de Popeye 2025</span>
+    <span class="hidden">Unos monitores de campamento se enfrentan a una leyenda urbana sobre Popeye mientras se preparan para abrir un campamento de verano.</span>
+  </a>
+</li>
+<!--FIN--><!-- El Invencible Iron Man -->
 <li>
   <a href="../Peliculas/pelicula645.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
