Crear/Actualizar Categorias/movie/index.html

--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La venganza de Popeye -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El senor de los anillos: La guerra de los Rohirrim -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula647.html">
+    <img src="https://image.tmdb.org/t/p/original/hpBdT0o9EckoaGmPRPtcgNZpz4F.jpg" alt="El señor de los anillos: La guerra de los Rohirrim" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El señor de los anillos: La guerra de los Rohirrim</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- La venganza de Popeye -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula646.html">
     <img src="https://image.tmdb.org/t/p/original/k0PqbsIRcmmm5wzO2mLQLa2SEjL.jpg" alt="La venganza de Popeye" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
