Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La venganza de Popeye -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El senor de los anillos: La guerra de los Rohirrim -->
+<li>
+  <a href="../Peliculas/pelicula647.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/hpBdT0o9EckoaGmPRPtcgNZpz4F.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El señor de los anillos: La guerra de los Rohirrim 2024</span>
+    <span class="hidden">Explora la "historia no contada" del Abismo de Helm, cientos de años antes de la mítica batalla, y de su fundador, Helm Hammerhand, Rey de Rohan.</span>
+  </a>
+</li>
+<!--FIN--><!-- La venganza de Popeye -->
 <li>
   <a href="../Peliculas/pelicula646.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
