--- a/Categorias/suspense/index.html
+++ b/Categorias/suspense/index.html
@@ -72,7 +72,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Rescate implacable -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Sting. Arana asesina -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula648.html">
+    <img src="https://image.tmdb.org/t/p/original/udHL7wQ1EQtiL5FqGMq9IWIyy9z.jpg" alt="Sting. Araña asesina" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Sting. Araña asesina</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Rescate implacable -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula641.html">
     <img src="https://image.tmdb.org/t/p/original/aG50Ad3UV8cCQWpNWSHHUqgKGNB.jpg" alt="Rescate implacable" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
