Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El senor de los anillos: La guerra de los Rohirrim -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Sting. Arana asesina -->
+<li>
+  <a href="../Peliculas/pelicula648.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/udHL7wQ1EQtiL5FqGMq9IWIyy9z.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Sting. Araña asesina 2024</span>
+    <span class="hidden">Charlotte, una rebelde niña de 12 años, adopta a una pequeña araña como mascota que encuentra en su ruinoso edificio. Esta empieza a adquirir un tamaño gigantesco y su apetito es cada vez más insaciable. Es entonces cuando Charlotte y su familia se ven atrapados y obligados a luchar por su supervivencia.</span>
+  </a>
+</li>
+<!--FIN--><!-- El senor de los anillos: La guerra de los Rohirrim -->
 <li>
   <a href="../Peliculas/pelicula647.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
