--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -73,7 +73,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El Profe -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Milagro Azul -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula650.html">
+    <img src="https://image.tmdb.org/t/p/original/mU6962lzuC26fVbKPAWHBKiuk2N.jpg" alt="Milagro Azul" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Milagro Azul</div>
+  <div class="text-xs text-white/70">2021</div>
+</article><!-- El Profe -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula642.html">
     <img src="https://image.tmdb.org/t/p/original/AdjL0R0c1rS9tld2dx9l9ptr9wf.jpg" alt="El Profe" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
