--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -254,7 +254,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Bright -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Milagro Azul -->
+<li>
+  <a href="../Peliculas/pelicula650.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/mU6962lzuC26fVbKPAWHBKiuk2N.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Milagro Azul 2021</span>
+    <span class="hidden">Para ayudar a su orfanato de escasos recursos, un hombre y un grupo de jóvenes se asocian al gruñón capitán de un barco para competir en un lucrativo torneo de pesca.</span>
+  </a>
+</li>
+<!--FIN--><!-- Bright -->
 <li>
   <a href="../Peliculas/pelicula649.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
