--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -254,7 +254,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Milagro Azul -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Sin hijos -->
+<li>
+  <a href="../Peliculas/pelicula651.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/reJmewTkOUX1he9Wb3uR3xfQshV.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Sin hijos 2020</span>
+    <span class="hidden">Sin hijos narra la historia de Marina, un alma libre que viaja desde que acabó la escuela y siempre ha estado enamorada de Fidel. Él, un solitario, rechazó la oferta de Marina de viajar por atender la tienda de música de su abuelo y quedarse amarrado a algo seguro. Un día, Marina decide regresar a buscarlo a ver si está solo. Cuando se encuentran, los dos vuelven a sentir las mariposas que sintieron años atrás pero las cosas se complican cuando Fidel, que es papá soltero y cuya vida entera es su hija, descubre que ella es un bicho raro al que no le gustan los niños y a los niños no les cae bien ella.</span>
+  </a>
+</li>
+<!--FIN--><!-- Milagro Azul -->
 <li>
   <a href="../Peliculas/pelicula650.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
