Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -254,7 +254,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Scream: Grita antes de morir -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Scream 2: Grita y vuelve a Gritar -->
+<li>
+  <a href="../Peliculas/pelicula653.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/kFFPrFxVHj9DWzDA6h0CqFlUEOW.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Scream 2: Grita y vuelve a Gritar 1997</span>
+    <span class="hidden">Sidney Presscott, dos años después de los asesinatos de Woodsboro, California, vive feliz con sus amigos en el Campus de la Universidad de Windsor. El curso toca ya a su fin. Pero el día en que se estrena una película basada en la novela de la periodista Gale Weathers sobre los crímenes de Woodsboro, alguien es asesinado en el cine del campus.</span>
+  </a>
+</li>
+<!--FIN--><!-- Scream: Grita antes de morir -->
 <li>
   <a href="../Peliculas/pelicula652.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
