Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -254,7 +254,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Scream 2: Grita y vuelve a Gritar -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Scream 3: La Mascara de la Muerte -->
+<li>
+  <a href="../Peliculas/pelicula654.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/oc0nWpMJCN0SFr3xEkrNdymFfRS.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Scream 3: La Máscara de la Muerte 2000</span>
+    <span class="hidden">Después de los terroríficos acontecimientos que tuvieron lugar en la localidad de Woodsboro, Sidney vive alejada del mundo en una casita de las montañas, intentando olvidar el pasado. Se dedica a proporcionar apoyo moral a mujeres con problemas a través del teléfono; pero, un día, alguien la llama para informarle de los asesinatos que se están produciendo durante el rodaje de "Puñalada 3", película basada en los hechos de los que ella fue protagonista.</span>
+  </a>
+</li>
+<!--FIN--><!-- Scream 2: Grita y vuelve a Gritar -->
 <li>
   <a href="../Peliculas/pelicula653.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
