--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Scream 3: La Mascara de la Muerte -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Scream 4 -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula655.html">
+    <img src="https://image.tmdb.org/t/p/original/sr7WNBgjX1UH9yw4Qq4o6GLAyVf.jpg" alt="Scream 4" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Scream 4</div>
+  <div class="text-xs text-white/70">2011</div>
+</article><!-- Scream 3: La Mascara de la Muerte -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula654.html">
     <img src="https://image.tmdb.org/t/p/original/oc0nWpMJCN0SFr3xEkrNdymFfRS.jpg" alt="Scream 3: La Máscara de la Muerte" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
