--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -254,7 +254,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Scream 3: La Mascara de la Muerte -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Scream 4 -->
+<li>
+  <a href="../Peliculas/pelicula655.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/sr7WNBgjX1UH9yw4Qq4o6GLAyVf.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Scream 4 2011</span>
+    <span class="hidden">Sidney Prescott ha logrado olvidar los asesinatos cometidos en Woodsboro. Diez años después, convertida en una escritora de éxito, vuelve a su pueblo natal con motivo de la gira de promoción de su nuevo libro. Pero su regreso irá acompañado de una nueva ola de crímenes perpetrados por un viejo conocido: Ghostface.</span>
+  </a>
+</li>
+<!--FIN--><!-- Scream 3: La Mascara de la Muerte -->
 <li>
   <a href="../Peliculas/pelicula654.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
