Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -254,7 +254,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Atrapado -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Scream 6 -->
+<li>
+  <a href="../Peliculas/pelicula658.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/zh0JffFtxcWEJBLKayH3d34WnNT.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Scream 6 2023</span>
+    <span class="hidden">Sam, Tara, Mindy y Chad quieren tener una vida completamente normal, por ello, después de la masacre final de Ghostface en Woodsboro, deciden mudarse a Nueva York. Todos ellos quieren abandonar esas horribles vivencias que sufrieron en su pequeño pueblo. Sin embargo, no pueden escapar tan fácilmente de sus problemas y les volverá a perseguir, el ya conocido, asesino con una máscara de fantasma. Lo comienzan a ver en el metro, en el supermercado, en medio de la gran ciudad. Sam, Tara, Mindy y Chad no están dispuestos a rendirse y se preparan para acabar con él y volver a vivir en tranquilidad.</span>
+  </a>
+</li>
+<!--FIN--><!-- Atrapado -->
 <li>
   <a href="../Peliculas/pelicula657.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
